# pixeletica

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml  files-output.json  main.py  pyproject.toml  setup.py  test_metadata_format.py
.github/workflows/: build-all.yml  build-api.yml  build-worker.yml
docker/: entrypoint.sh
docs/: api.md  api_conversion.md  developer_guide.md  docker_setup.md  task_monitoring.md  user_guide.md
pixeletica/: __init__.py  cli.py  image_ops.py  metadata.py  schematic_generator.py
pixeletica/api/: models.py
pixeletica/api/routes/: __init__.py  conversion.py  maps.py
pixeletica/api/services/: __init__.py  task_queue.py
pixeletica/block_utils/: __init__.py  block_loader.py  color_matcher.py
pixeletica/dithering/: __init__.py  floyd_steinberg.py  no_dither.py  ordered_dither.py  random_dither.py
pixeletica/export/: __init__.py  export_manager.py  web_export.py
pixeletica/gui/: app.py  export_settings.py
pixeletica/rendering/: __init__.py  line_renderer.py  texture_loader.py
src/docker/: README.md  entrypoint.sh  worker.dockerfile
src/minecraft/: block-colors-2024.csv  block-colors-2025.csv  block_texture_mapping.json
src/pixeletica/: cli.py  cli_task.py  image_ops.py  metadata.py  schematic_generator.py
src/pixeletica/api/: __init__.py  config.py  main.py  models.py
src/pixeletica/block_utils/: block_loader.py  color_matcher.py
src/pixeletica/coordinates/: __init__.py  chunk_calculator.py
src/pixeletica/dithering/: __init__.py  (+4 more)
(+19 files in other folders)
